[tool.poetry]
name = "jira-commands"
version = "0.13.0"
description = "Command line utilities for interacting with JIRA"
authors = ["Joe Block <jpb@unixorn.net>"]
homepage = "https://github.com/unixorn/jira-commands"
repository = "https://github.com/unixorn/jira-commands"
readme = 'README.md'

[tool.poetry.dependencies]
# python = "^3.9"
python = "^3.6.5"
jira = "^3.1.1"
PyYAML = "^6.0"
thelogrus = "^0.7.0"
cryptography = "^38.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nose = "^1.3.7"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
# There are multiple names for some of these for ease of use
jc = 'jira_commands.cli.jc:jc_driver'

jc-assign-ticket = 'jira_commands.cli.crudops:assignTicket'
jc-ticket-assign = 'jira_commands.cli.crudops:assignTicket'

jc-close-ticket = 'jira_commands.cli.crudops:closeTicket'
jc-ticket-close = 'jira_commands.cli.crudops:closeTicket'

jc-comment-on-ticket = 'jira_commands.cli.crudops:commentOnTicket'
jc-ticket-comment = 'jira_commands.cli.crudops:commentOnTicket'

jc-create-ticket = 'jira_commands.cli.crudops:createTicket'
jc-ticket-create = 'jira_commands.cli.crudops:createTicket'

jc-dump-all-customfield-allowed-values = 'jira_commands.cli.vivisect:dump_all_customfield_allowed_values'
jc-dump-all-custom-field-allowed-values = 'jira_commands.cli.vivisect:dump_all_customfield_allowed_values'

jc-extract-customfield-mappings = 'jira_commands.cli.map_extractor:create_mapping_file'
jc-extract-custom-field-mappings = 'jira_commands.cli.map_extractor:create_mapping_file'
jc-ticket-dump-metadata = 'jira_commands.cli.vivisect:dump_metadata'
jc-ticket-metadata = 'jira_commands.cli.vivisect:dump_metadata'

jc-examine-ticket = 'jira_commands.cli.vivisect:vivisect'
jc-vivisect-ticket = 'jira_commands.cli.vivisect:vivisect'
jc-ticket-examine = 'jira_commands.cli.vivisect:vivisect'
jc-ticket-vivisect = 'jira_commands.cli.vivisect:vivisect'

jc-custom-field-allowed-values = 'jira_commands.cli.vivisect:listAllowedFieldValues'

jc-get-link-types = 'jira_commands.cli.crudops:getLinkTypes'
jc-get-priorities = 'jira_commands.cli.crudops:getPriorities'
jc-get-priority-ids = 'jira_commands.cli.crudops:getPriorities'

jc-link-tickets = 'jira_commands.cli.crudops:linkTickets'
jc-ticket-link = 'jira_commands.cli.crudops:linkTickets'

jc-list-ticket-transitions = 'jira_commands.cli.crudops:getTransitions'
jc-ticket-transition-list = 'jira_commands.cli.crudops:getTransitions'

jc-list-project-tickets = 'jira_commands.cli.list:listTickets'

jc-ticket-transition-set = 'jira_commands.cli.crudops:transitionTo'
jc-transition-ticket-to = 'jira_commands.cli.crudops:transitionTo'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/unixorn/jira-commands/issues"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
