[tool.poetry]
name = "jira-commands"
version = "0.22.2"
description = "Command line utilities for interacting with JIRA"
authors = ["Joe Block <jpb@unixorn.net>"]
homepage = "https://github.com/unixorn/jira-commands"
repository = "https://github.com/unixorn/jira-commands"
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
jira = "^3.1.1"
PyYAML = "^6.0"
thelogrus = "^0.7.0"
cryptography = ">=38.0.3,<43.0.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
black = "^24.4.2"
isort = "^5.10.1"

[tool.poetry.scripts]
# There are multiple names for some of these for ease of use
jc = 'jira_commands.cli.jc:jc_driver'

jc-assign-ticket = 'jira_commands.cli.crudops:assign_ticket'
jc-ticket-assign = 'jira_commands.cli.crudops:assign_ticket'

jc-close-ticket = 'jira_commands.cli.crudops:close_ticket'
jc-ticket-close = 'jira_commands.cli.crudops:close_ticket'

jc-comment-on-ticket = 'jira_commands.cli.crudops:comment_on_ticket'
jc-ticket-comment = 'jira_commands.cli.crudops:comment_on_ticket'

jc-create-ticket = 'jira_commands.cli.crudops:create_ticket'
jc-ticket-create = 'jira_commands.cli.crudops:create_ticket'

jc-dump-all-customfield-allowed-values = 'jira_commands.cli.vivisect:dump_all_customfield_allowed_values'
jc-dump-all-custom-field-allowed-values = 'jira_commands.cli.vivisect:dump_all_customfield_allowed_values'

jc-values-for-custom-field = 'jira_commands.cli.vivisect:extract_allowed_values'
jc-extract-values-for-custom-field = 'jira_commands.cli.vivisect:extract_allowed_values'
jc-extract-customfield-mappings = 'jira_commands.cli.map_extractor:create_mapping_file'
jc-extract-custom-field-mappings = 'jira_commands.cli.map_extractor:create_mapping_file'
jc-ticket-dump-metadata = 'jira_commands.cli.vivisect:dump_metadata'
jc-ticket-metadata = 'jira_commands.cli.vivisect:dump_metadata'

jc-examine-ticket = 'jira_commands.cli.vivisect:vivisect'
jc-vivisect-ticket = 'jira_commands.cli.vivisect:vivisect'
jc-ticket-examine = 'jira_commands.cli.vivisect:vivisect'
jc-ticket-vivisect = 'jira_commands.cli.vivisect:vivisect'

jc-custom-field-allowed-values = 'jira_commands.cli.vivisect:list_allowed_field_values'

jc-get-link-types = 'jira_commands.cli.crudops:get_link_types'
jc-get-priorities = 'jira_commands.cli.crudops:get_priorities'
jc-get-priority-ids = 'jira_commands.cli.crudops:get_priorities'

jc-jql-query = 'jira_commands.cli.jql:run_jql'
jc-run-jql-query = 'jira_commands.cli.jql:run_jql'

jc-link-tickets = 'jira_commands.cli.crudops:link_tickets'
jc-ticket-link = 'jira_commands.cli.crudops:link_tickets'

jc-list-ticket-transitions = 'jira_commands.cli.crudops:get_transitions'
jc-ticket-transition-list = 'jira_commands.cli.crudops:get_transitions'

jc-assign-subtasks = 'jira_commands.cli.subtasks:assign_subtasks'
jc-assign-ticket-subtasks = 'jira_commands.cli.subtasks:assign_subtasks'
jc-close-subtasks = 'jira_commands.cli.subtasks:close_subtasks'
jc-close-ticket-subtasks = 'jira_commands.cli.subtasks:close_subtasks'
jc-comment-on-subtasks = 'jira_commands.cli.subtasks:comment_on_subtasks'
jc-comment-on-ticket-subtasks = 'jira_commands.cli.subtasks:comment_on_subtasks'
jc-list-ticket-subtasks = 'jira_commands.cli.subtasks:list_subtasks'
jc-ticket-list-subtasks = 'jira_commands.cli.subtasks:list_subtasks'
jc-ticket-subtasks = 'jira_commands.cli.subtasks:list_subtasks'
jc-transition-subtasks = 'jira_commands.cli.subtasks:transition_subtasks'
jc-transition-ticket-subtasks = 'jira_commands.cli.subtasks:transition_subtasks'

jc-add-label = 'jira_commands.cli.labels:add_label'
jc-get-labels = 'jira_commands.cli.labels:get_labels'
jc-label-add = 'jira_commands.cli.labels:add_label'
jc-label-get = 'jira_commands.cli.labels:get_labels'
jc-label-remove = 'jira_commands.cli.labels:remove_label'
jc-list-labels = 'jira_commands.cli.labels:get_labels'
jc-remove-label = 'jira_commands.cli.labels:remove_label'

jc-list-project-tickets = 'jira_commands.cli.list:listTickets'

jc-ticket-transition-set = 'jira_commands.cli.crudops:transition_to'
jc-transition-ticket-to = 'jira_commands.cli.crudops:transition_to'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/unixorn/jira-commands/issues"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.254,<0.4.9"
pytest = ">=7.2.2,<9.0.0"
flake8 = ">=6,<8"
pre-commit = "^3.2.0"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 132
